<resources>
    <string name="app_name">BookStore</string>
    <string name="insert_dummy_book">Insert Dummy Book</string>
    <string name="delete_books">Delete All Books</string>
    <string name="buy_now">BUY NOW</string>
    <string name="insert_new_book">Insert New Book</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="book_provider">Book Provider</string>
    <string name="number_of_books">Number Of Books</string>
    <string name="your_book_price">Your Book Price</string>
    <string name="your_book_name">Your Book Name</string>
    <string name="supplier_number">Supplier\nNumber</string>
    <string name="supplier">Supplier</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="book_editor">Book Editor</string>
    <string name="supplier_order_btn">Order</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="book_information_title">Book Information</string>
    <string name="supplier_information_title">Supplier Information</string>
    <string name="empty_view_no_books">No books available in the store...</string>
    <string name="empty_view_add_books">you can add some books !!!</string>
    <string name="name_error_message">Book Must Have a Name</string>
    <string name="price_error_message">Book Must Have a Valid Price</string>
    <string name="supplier_error_message">Book Must Have a supplier</string>
    <string name="error_supplier_number_message">Enter Valid Phone Number With 11 Numbers Length</string>
    <string name="price_free">FREE</string>
    <string name="delete_dialog_msg">Do you want to delete the book ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_all_books">Are you sure you want to delete all books ?</string>
    <string name="condensed_font">sans-serif-condensed</string>
    <string name="supplier_btn_error">Sorry can\'t order without providing valid supplier phone number</string>
    <string name="book_inserted_successfully">New Book Inserted Successfully</string>
    <string name="insert_fail">Failed To Insert New Book</string>
    <string name="update_success">Book Updated Successfully</string>
    <string name="update_fail">Failed To Update Book</string>
    <string name="in_stock">In Stock :</string>
    <string name="remain"> Remain</string>
    <string name="quantity_update_fail">Failed to Updated Quantity</string>
    <string name="deleted_successfully">Book Deleted Successfully</string>
    <string name="delete_fail">Failed to Delete Book</string>
    <string name="img_picker_title">Select Book Picture</string>
    <string name="new_book_title">Add New Book</string>
    <string name="book_editor_title">Book Editor</string>

</resources>
